--- a/recruiter-server/views/home.ejs
+++ b/recruiter-server/views/home.ejs
@@ -101,7 +101,7 @@
     <div class="grid grid-cols-1 md:grid-cols-5 gap-8 text-center">
       <div>
         <p class="text-4xl font-bold mb-2"><%= companyCount %></p>
-        <p class="text-blue-800 font-bold">Companies</p>
+        <p class="text-blue-800 font-bold">Companies Registered</p>
       </div>
       <div>
         <p class="text-4xl font-bold mb-2"><%= jobCount %></p>
