--- a/recruiter-server/views/internships.ejs
+++ b/recruiter-server/views/internships.ejs
@@ -20,7 +20,7 @@
                 <tr class="text-gray-700 bg-gray-200">
                     <th class="px-6 py-3 border border-gray-300">Company</th>
                     <th class="px-6 py-3 border border-gray-300">Internship Title</th>
-                    <th class="px-6 py-3 border border-gray-300">Stipend</th>
+                    <th class="px-6 py-3 border border-gray-300">Stipend (in K)</th>
                     <th class="px-6 py-3 border border-gray-300">Location</th>
                     <th class="px-6 py-3 border border-gray-300">Duration</th>
                     <th class="px-6 py-3 border border-gray-300">Opportunities</th>
@@ -52,11 +52,11 @@
                                         Delete
                                     </button>
                                 </form>
-                                <form action="/recruiter/delete-intern/<%= internships[i]._id %>" method="POST">
-                                    <button type="submit" class="bg-green-500 hover:bg-green-800 text-white font-bold py-2 px-4 rounded">
-                                        Edit
-                                    </button>
-                                </form>
+                                <a href="/recruiter/edit-internship/<%= internships[i]._id %>" 
+                                    class="bg-green-500 hover:bg-green-800 text-white font-bold py-2 px-4 rounded inline-block text-center">
+                                    Edit
+                                 </a>
+                                 
                             </td>
                             <td class="px-6 py-4 border border-gray-300">
                                 <form action="/recruiter/applicant-intern/<%= internships[i]._id %>" method="POST">
